clamav-sys/no-libclang/bindings.rs

pub type cl_fmap_t = cl_fmap;
#[doc = " @brief Read callback function type.\n\n A callback function pointer type for reading data from a cl_fmap_t that uses\n reads data from a handle interface.\n\n Read 'count' bytes starting at 'offset' into the buffer 'buf'\n\n Thread safety: It is guaranteed that only one callback is executing for a\n specific handle at any time, but there might be multiple callbacks executing\n for different handle at the same time.\n\n @param handle    The handle passed to cl_fmap_open_handle, its meaning is up\n                  to the callback's implementation\n @param buf       A buffer to read data into, must be at least offset + count\n                  bytes in size.\n @param count     The number of bytes to read.\n @param offset    The offset into buf to read the data to. If successful,\n                  the number of bytes actually read is returned. Upon reading\n                  end-of-file, zero is returned. Otherwise, a -1 is returned\n                  and the global variable errno is set to indicate the error."]
pub type clcb_pread = ::std::option::Option<
    unsafe extern "C" fn(
        handle: *mut ::std::os::raw::c_void,
        buf: *mut ::std::os::raw::c_void,
        count: usize,
        offset: off_t,
    ) -> off_t,
>;
extern "C" {
    #[doc = " @brief Open a map given a handle.\n\n Open a map for scanning custom data accessed by a handle and pread (lseek +\n read)-like interface. For example a file descriptor or a WIN32 HANDLE.\n By default fmap will use aging to discard old data, unless you tell it not\n to.\n\n The handle will be passed to the callback each time.\n\n @param handle        A handle that may be accessed using lseek + read.\n @param offset        Initial offset to start scanning.\n @param len           Length of the data from the start (not the offset).\n @param pread_cb      A callback function to read data from the handle.\n @param use_aging     Set to a non-zero value to enable aging.\n @return cl_fmap_t*   A map representing the handle interface."]
    pub fn cl_fmap_open_handle(
        handle: *mut ::std::os::raw::c_void,
        offset: usize,
        len: usize,
        pread_cb: clcb_pread,
        use_aging: ::std::os::raw::c_int,
    ) -> *mut cl_fmap_t;
}
extern "C" {
    #[doc = " @brief Open a map given a buffer.\n\n Open a map for scanning custom data, where the data is already in memory,\n either in the form of a buffer, a memory mapped file, etc.\n Note that the memory [start, start+len) must be the _entire_ file,\n you can't give it parts of a file and expect detection to work.\n\n @param start         Pointer to a buffer of data.\n @param len           Length in bytes of the data.\n @return cl_fmap_t*   A map representing the buffer."]
    pub fn cl_fmap_open_memory(start: *const ::std::os::raw::c_void, len: usize) -> *mut cl_fmap_t;
}
extern "C" {
    #[doc = " @brief Releases resources associated with the map.\n\n You should release any resources you hold only after (handles, maps) calling\n this function.\n\n @param map           Map to be closed."]
    pub fn cl_fmap_close(arg1: *mut cl_fmap_t);
}
extern "C" {
    #[doc = " @brief Scan custom data.\n\n @param map           Buffer to be scanned, in form of a cl_fmap_t.\n @param filename      Name of data origin. Does not need to be an actual\n                      file on disk. May be NULL if a name is not available.\n @param[out] virname  Pointer to receive the signature match name name if a\n                      signature matched.\n @param[out] scanned  Number of bytes scanned.\n @param engine        The scanning engine.\n @param scanoptions   The scanning options struct.\n @param context       An application-defined context struct, opaque to\n                      libclamav. May be used within your callback functions.\n @return cl_error_t   CL_CLEAN if no signature matched. CL_VIRUS if a\n                      signature matched. Another CL_E* error code if an\n                      error occurred."]
    pub fn cl_scanmap_callback(
        map: *mut cl_fmap_t,
        filename: *const ::std::os::raw::c_char,
        virname: *mut *const ::std::os::raw::c_char,
        scanned: *mut ::std::os::raw::c_ulong,
        engine: *const cl_engine,
        scanoptions: *mut cl_scan_options,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t;
}
